# rando

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  magic_number.py  magic_number_dev.py  requirements.txt  setup.cfg  setup.py  shell.py  tox.ini
db_layer/: create_table.py  db_connection.py  db_dump.py  display_table.py  drop_table.py  insert_field.py  open_file.py
magic_number/: magic_number.py  magic_number_auto.py  magic_number_binary.py  magic_number_user.py  utils.py
magic_number.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_shell.py  test_version.py
utilsfolder/: __init__.py  magic_shell.py  shell.py  utils.py  version.py
