[metadata]
platforms    = any
description  = Python3 tool that does stuff
long_description = file: README.md

[flake8]
exclude = .venv,.git,.tox
min_python_version = 3.7
doctests = True
max-complexity = 22
max-line-length = 79
# E203: Whitespace before ':'
# W503: Line break occurred before a binary operator
ignore =  E203,W503
# E501: line too long
per-file-ignores =
    /tests/test_*.py: E501

[black]
max-line-length = 79
